--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,34 @@
+atomicwrites==1.3.0
+attrs==19.3.0
+blinker==1.4
+Bootstrap-Flask==1.3.0
 click==7.1.1
+colorama==0.4.3
+dnspython==1.16.0
 dominate==2.5.1
+email-validator==1.0.5
 facebook-business==4.0.0
 Flask==1.1.2
 Flask-Bootstrap==3.3.7.1
-FLask-Login==0.4.1
+Flask-Login==0.4.1
+Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.4.1
+Flask-WTF==0.14.3
+idna==2.9
+importlib-metadata==1.6.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+more-itertools==8.2.0
+packaging==20.3
+pluggy==0.13.1
+py==1.8.1
+pyparsing==2.4.7
+pytest==5.4.1
+six==1.14.0
 SQLAlchemy==1.3.16
 visitor==0.1.3
+wcwidth==0.1.9
 Werkzeug==1.0.1
+WTForms==2.3.1
+zipp==3.1.0
